[package]
authors = ["Brandon Slinkard <slinkardbrandon@gmail.com>"]
edition = "2018"
name = "tq"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
error-chain = "0.12.4"
toml = "0.5.7"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
